# cppTasks

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Codes/: CMakeLists.txt
Codes/DiscIntersection/: CMakeLists.txt  DiscIntersection.cpp
Codes/Dominator/: CMakeLists.txt  Dominator.cpp
Codes/EquiLeader/: CMakeLists.txt  EquiLeader.cpp
Codes/GenomicRange/: CMakeLists.txt  GenomicRange.cpp
Codes/MaxCounters/: CMakeLists.txt  MaxCounters.cpp
Codes/MaxDoubleSliceSum/: CMakeLists.txt  MaxDoubleSliceSum.cpp
Codes/MaxFlags/: CMakeLists.txt  MaxFlags.cpp
Codes/MaxSliceSum/: CMakeLists.txt  MaxSliceSum.cpp
Codes/MinAvgTwoSlice/: CMakeLists.txt  MinAvgTwoSlice.cpp
Codes/Nesting/: CMakeLists.txt  Nesting.cpp
Codes/NonDivisors/: CMakeLists.txt  NonDivisors.cpp
Codes/Peaks/: CMakeLists.txt  Peaks.cpp
Codes/StoneWall/: CMakeLists.txt  StoneWall.cpp
Codes/TapeEquilibrium/: CMakeLists.txt  TapeEquilibrium.cpp
Codes/Triangle/: CMakeLists.txt  Triangle.cpp
