cmake_minimum_required(VERSION 3.10)
project(CppCodiltyTasks)

add_subdirectory(TapeEquilibrium)
add_subdirectory(MaxCounters)
add_subdirectory(GenomicRange)
add_subdirectory(MinAvgTwoSlice)
add_subdirectory(Triangle)
add_subdirectory(DiscIntersection)
add_subdirectory(Nesting)
add_subdirectory(StoneWall)
add_subdirectory(Dominator)
add_subdirectory(EquiLeader)
add_subdirectory(MaxSliceSum)
add_subdirectory(MaxDoubleSliceSum)
add_subdirectory(MaxFlags)
add_subdirectory(Peaks)
add_subdirectory(NonDivisors)